--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <!-- Replace links after launch -->
         <a href="https://twitter.com/" target="_blank" class="px-3 py-2 rounded-xl bg-zinc-800 hover:bg-zinc-700">X</a>
         <a href="https://t.me/" target="_blank" class="px-3 py-2 rounded-xl bg-zinc-800 hover:bg-zinc-700">TG</a>
-        <a href="#buy" class="px-3 py-2 rounded-xl bg-gradient-to-r from-sol.top via-sol.mid to-sol.bot text-zinc-900 font-semibold">BUY</a>
+        <a href="#buy" class="px-3 py-2 rounded-xl bg-gradient-to-r from-sol.top via-sol.mid to-sol.bot text-[#ffbb11] font-semibold">BUY</a>
       </div>
     </div>
   </header>
