--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <p class="mt-5 text-zinc-300 max-w-prose">We don’t just want pumps — <span class="text-loaf.neon font-semibold">we KNEAD them</span>. The stoic bread cat on Solana. Calm crust. Violent core. Join the loaf army.</p>
         <div class="mt-8 flex flex-wrap gap-3">
           <!-- Replace hrefs -->
-          <a id="buy" href="#" class="px-5 py-3 rounded-2xl bg-gradient-to-r from-sol.top via-sol.mid to-sol.bot text-zinc-900 font-bold shadow-loaf">Buy on DEX</a>
+          <a id="buy" href="#" class="px-5 py-3 rounded-2xl bg-gradient-to-r from-sol.top via-sol.mid to-sol.bot text-text-[#ffbb11] font-bold shadow-loaf">Buy on DEX</a>
           <a href="#chart" class="px-5 py-3 rounded-2xl bg-zinc-800 hover:bg-zinc-700">Chart</a>
           <a href="#community" class="px-5 py-3 rounded-2xl bg-zinc-800 hover:bg-zinc-700">Join</a>
         </div>
