--- a/index.html
+++ b/index.html
@@ -107,8 +107,19 @@
       <div class="grid md:grid-cols-3 gap-6">
         <div class="md:col-span-2">
           <div class="rounded-2xl ring-1 ring-white/10 overflow-hidden bg-zinc-900/50">
-            <!-- Dexscreener/GMGN embed. Replace the src once live -->
-            <iframe title="Chart" src="about:blank" class="w-full h-[420px] bg-zinc-950"></iframe>
+<div class="rounded-2xl ring-1 ring-white/10 overflow-hidden bg-zinc-900/50 p-4">
+  <blockquote class="twitter-tweet">
+    <p lang="en" dir="ltr">⛧ 𝕿𝖍𝖊 𝕾𝖕𝖗𝖎𝖓𝖌 𝕴𝖘 𝕷𝖔𝖆𝖉𝖊𝖉 ⛧<br><br>
+    BB squeeze = max tension. <br>
+    RSI 42 = stealth accumulation. <br>
+    Vol dead = before the storm. <br><br>
+    MC $75.6K / Liq $36.5K → 2-5x ignition fuel.<br><br>
+    ⚔ One spark (raid / meme / news) → <br>
+    break 0.00015 → rally 0.0005+ with cult hype.<br><br>
+    Just in… <a href="https://t.co/4EUB0j1WUq">pic.twitter.com/4EUB0j1WUq</a></p>&mdash; 0xANARCHO (@0xANARCHO)
+    <a href="https://twitter.com/0xANARCHO/status/1954092948712222810?ref_src=twsrc%5Etfw">August 9, 2025</a>
+  </blockquote>
+</div>
           </div>
         </div>
         <div class="space-y-4">
