--- a/index.html
+++ b/index.html
@@ -101,25 +101,23 @@
     </div>
   </section>
 
-  <!-- TICKER / WIDGETS -->
+ <!-- TICKER / WIDGETS -->
   <section id="chart" class="py-12 md:py-16 border-t border-white/10">
     <div class="max-w-7xl mx-auto px-4">
       <div class="grid md:grid-cols-3 gap-6">
         <div class="md:col-span-2">
-          <div class="rounded-2xl ring-1 ring-white/10 overflow-hidden bg-zinc-900/50">
-<div class="rounded-2xl ring-1 ring-white/10 overflow-hidden bg-zinc-900/50 p-4">
-  <blockquote class="twitter-tweet" data-theme="dark">
-    <p lang="en" dir="ltr">⛧ 𝕿𝖍𝖊 𝕾𝖕𝖗𝖎𝖓𝖌 𝕴𝖘 𝕷𝖔𝖆𝖉𝖊𝖉 ⛧<br><br>
-    BB squeeze = max tension. <br>
-    RSI 42 = stealth accumulation. <br>
-    Vol dead = before the storm. <br><br>
-    MC $75.6K / Liq $36.5K → 2-5x ignition fuel.<br><br>
-    ⚔ One spark (raid / meme / news) → <br>
-    break 0.00015 → rally 0.0005+ with cult hype.<br><br>
-    Just in… <a href="https://t.co/4EUB0j1WUq">pic.twitter.com/4EUB0j1WUq</a></p>&mdash; 0xANARCHO (@0xANARCHO)
-    <a href="https://twitter.com/0xANARCHO/status/1954092948712222810?ref_src=twsrc%5Etfw">August 9, 2025</a>
-  </blockquote>
-</div>
+          <div class="rounded-2xl ring-1 ring-white/10 bg-zinc-900/50 p-4">
+            <blockquote class="twitter-tweet" data-theme="dark" data-dnt="true">
+              <p lang="en" dir="ltr">⛧ 𝕿𝖍𝖊 𝕾𝖕𝖗𝖎𝖓𝖌 𝕴𝖘 𝕷𝖔𝖆𝖉𝖊𝖉 ⛧<br><br>
+              BB squeeze = max tension. <br>
+              RSI 42 = stealth accumulation. <br>
+              Vol dead = before the storm. <br><br>
+              MC $75.6K / Liq $36.5K → 2-5x ignition fuel.<br><br>
+              ⚔ One spark (raid / meme / news) → <br>
+              break 0.00015 → rally 0.0005+ with cult hype.<br><br>
+              Just in… <a href="https://t.co/4EUB0j1WUq">pic.twitter.com/4EUB0j1WUq</a></p>&mdash; 0xANARCHO (@0xANARCHO)
+              <a href="https://twitter.com/0xANARCHO/status/1954092948712222810?ref_src=twsrc%5Etfw">August 9, 2025</a>
+            </blockquote>
           </div>
         </div>
         <div class="space-y-4">
@@ -127,9 +125,9 @@
             <h3 class="font-semibold mb-2">Token Stats</h3>
             <ul class="text-sm text-zinc-300 space-y-1">
               <li>Chain: <b>Solana</b></li>
-              <li>Supply: <b>1,000,000,000</b> (editable)</li>
-              <li>Tax: <b>0%</b> (optional)</li>
-              <li>LP: <b>LOCKED</b> (link proof)</li>
+              <li>Supply: <b>1,000,000,000</b></li>
+              <li>Tax: <b>0%</b></li>
+              <li>LP: <b>LOCKED</b></li>
             </ul>
           </div>
           <div class="p-5 rounded-2xl bg-zinc-900/60 ring-1 ring-white/10">
@@ -248,6 +246,8 @@
     // tiny touches
     document.getElementById('year').textContent = new Date().getFullYear();
     gsap.to('.animate-pulse', { repeat: -1, yoyo: true, duration: 1.2, opacity: 0.3 });
+  
   </script>
+  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </body>
 </html>
