--- a/index.html
+++ b/index.html
@@ -101,47 +101,48 @@
     </div>
   </section>
 
-<!-- COMMUNITY WIDGET (opens X Community in new tab) -->
-<div class="rounded-2xl ring-1 ring-white/10 bg-zinc-900/50 overflow-hidden">
-  <!-- header bar mimicking X -->
-  <div class="flex items-center justify-between px-4 py-3 border-b border-white/10">
-    <div class="flex items-center gap-3">
-      <!-- X logo -->
-      <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" viewBox="0 0 24 24" fill="currentColor">
-        <path d="M18.244 2H21l-7.5 8.573L22.5 22h-6.756l-5.06-6.23L4.5 22H2l8.23-9.41L1.5 2h6.756l4.64 5.714L18.244 2zM7.35 3.5H4.98l9.1 11.23L16.65 20.5h2.37l-9.1-11.23L7.35 3.5z"/>
-      </svg>
-      <div>
-        <div class="text-sm font-semibold">X Community</div>
-        <div class="text-xs text-zinc-400 truncate">WARLON — raids, memes, ops</div>
+  <!-- TICKER / WIDGETS -->
+  <section id="chart" class="py-12 md:py-16 border-t border-white/10">
+    <div class="max-w-7xl mx-auto px-4">
+      <div class="grid md:grid-cols-3 gap-6">
+        <div class="md:col-span-2">
+          <div class="rounded-2xl ring-1 ring-white/10 bg-zinc-900/50 p-4">
+            <blockquote class="twitter-tweet" data-theme="dark" data-dnt="true">
+              <p lang="en" dir="ltr">⛧ 𝕿𝖍𝖊 𝕾𝖕𝖗𝖎𝖓𝖌 𝕴𝖘 𝕷𝖔𝖆𝖉𝖊𝖉 ⛧<br><br>
+              BB squeeze = max tension. <br>
+              RSI 42 = stealth accumulation. <br>
+              Vol dead = before the storm. <br><br>
+              MC $75.6K / Liq $36.5K → 2-5x ignition fuel.<br><br>
+              ⚔ One spark (raid / meme / news) → <br>
+              break 0.00015 → rally 0.0005+ with cult hype.<br><br>
+              Just in… <a href="https://t.co/4EUB0j1WUq">pic.twitter.com/4EUB0j1WUq</a></p>&mdash; 0xANARCHO (@0xANARCHO)
+              <a href="https://twitter.com/0xANARCHO/status/1954092948712222810?ref_src=twsrc%5Etfw">August 9, 2025</a>
+            </blockquote>
+          </div>
+        </div>
+        <div class="space-y-4">
+          <div class="p-5 rounded-2xl bg-zinc-900/60 ring-1 ring-white/10">
+            <h3 class="font-semibold mb-2">Token Stats</h3>
+            <ul class="text-sm text-zinc-300 space-y-1">
+              <li>Chain: <b>Solana</b></li>
+              <li>Supply: <b>1,000,000,000</b></li>
+              <li>Tax: <b>0%</b></li>
+              <li>LP: <b>LOCKED</b></li>
+            </ul>
+          </div>
+          <div class="p-5 rounded-2xl bg-zinc-900/60 ring-1 ring-white/10">
+            <h3 class="font-semibold mb-2">Links</h3>
+            <div class="flex flex-wrap gap-2 text-sm">
+              <a href="https://twitter.com/" target="_blank" class="px-3 py-2 rounded-xl bg-zinc-800 hover:bg-zinc-700">X</a>
+              <a href="https://t.me/" target="_blank" class="px-3 py-2 rounded-xl bg-zinc-800 hover:bg-zinc-700">Telegram</a>
+              <a href="#" class="px-3 py-2 rounded-xl bg-zinc-800 hover:bg-zinc-700">Dexscreener</a>
+              <a href="#" class="px-3 py-2 rounded-xl bg-zinc-800 hover:bg-zinc-700">GMGN</a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-    <span class="text-xs px-2 py-1 rounded bg-zinc-800">public</span>
-  </div>
-
-  <!-- body -->
-  <div class="px-4 py-4">
-    <div class="flex items-center gap-3">
-      <div class="w-12 h-12 rounded-xl bg-gradient-to-br from-sol.top via-sol.mid to-sol.bot"></div>
-      <div>
-        <div class="text-base font-bold">WARLON Community</div>
-        <div class="text-xs text-zinc-400">Live raids • Meme drops • Alpha</div>
-      </div>
-    </div>
-
-    <p class="mt-4 text-sm text-zinc-300">
-      Solana Warlord HQ. Join to get raid calls, degen ops and daily meme packs.
-      Respect the pump, bring the energy. 🟢
-    </p>
-
-    <div class="mt-5 flex items-center justify-between">
-      <div class="text-xs text-zinc-400">Members: <span class="font-semibold text-zinc-200">—</span></div>
-      <a href="https://x.com/i/communities/1952809421719126374" target="_blank"
-         class="px-4 py-2 rounded-xl bg-zinc-100 text-zinc-900 font-semibold hover:bg-white transition">
-        Open in X
-      </a>
-    </div>
-  </div>
-</div>
+  </section>
 
   <!-- ABOUT -->
   <section id="about" class="py-16 md:py-20">
