--- a/index.html
+++ b/index.html
@@ -166,25 +166,31 @@
   </section>
 
   <!-- TOKENOMICS -->
-  <section id="tokenomics" class="py-16 border-t border-white/10 bg-zinc-900/40">
-    <div class="max-w-6xl mx-auto px-4">
-      <h2 class="text-3xl md:text-4xl font-bold">Tokenomics</h2>
-      <div class="mt-8 grid md:grid-cols-3 gap-6">
-        <div class="p-6 rounded-2xl bg-zinc-900 ring-1 ring-white/10">
-          <h3 class="font-semibold mb-2">Supply</h3>
-          <p class="text-zinc-300">1,000,000,000 (editable)</p>
-        </div>
-        <div class="p-6 rounded-2xl bg-zinc-900 ring-1 ring-white/10">
-          <h3 class="font-semibold mb-2">LP</h3>
-          <p class="text-zinc-300">Locked. <a href="#" class="underline">Add proof link</a></p>
-        </div>
-        <div class="p-6 rounded-2xl bg-zinc-900 ring-1 ring-white/10">
-          <h3 class="font-semibold mb-2">Taxes</h3>
-          <p class="text-zinc-300">0% / 0% (or adjust)</p>
-        </div>
+ <section id="tokenomics" class="py-16 border-t border-white/10 bg-zinc-900/40">
+  <div class="max-w-6xl mx-auto px-4">
+    <h2 class="text-3xl md:text-4xl font-bold">Tokenomics</h2>
+
+    <div class="mt-8 grid md:grid-cols-3 gap-6">
+      <!-- Supply -->
+      <div class="p-6 rounded-2xl bg-zinc-900 ring-1 ring-white/10">
+        <h3 class="font-semibold mb-2">Supply</h3>
+        <p class="text-zinc-300">1,000,000,000 <span class="opacity-70">(editable)</span></p>
+      </div>
+
+      <!-- Buy & Hold / or Trade -->
+      <div class="p-6 rounded-2xl bg-zinc-900 ring-1 ring-white/10">
+        <h3 class="font-semibold mb-2">Buy &amp; Hold</h3>
+        <p class="text-zinc-300">or <span class="font-semibold">Trade</span></p>
+      </div>
+
+      <!-- Ride the Wave / or Get Wrecked -->
+      <div class="p-6 rounded-2xl bg-zinc-900 ring-1 ring-white/10">
+        <h3 class="font-semibold mb-2">Ride the Wave</h3>
+        <p class="text-zinc-300">or <span class="font-semibold">Get Wrecked</span></p>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
   <!-- ROADMAP -->
   <section id="roadmap" class="py-16">
