--- a/index.html
+++ b/index.html
@@ -218,18 +218,37 @@
   </section>
 
   <!-- COMMUNITY -->
-  <section id="community" class="py-16 border-t border-white/10 bg-zinc-900/40">
-    <div class="max-w-6xl mx-auto px-4">
-      <div class="grid md:grid-cols-2 gap-8 items-center">
-        <div>
-          <h2 class="text-3xl md:text-4xl font-bold">Join the Loaf Army</h2>
-          <p class="mt-3 text-zinc-300">We knead. We rise. We pump. Drop your loaf memes, raid callouts, and alpha. Stickers, banners, and raid copy included.</p>
-          <div class="mt-6 flex flex-wrap gap-3">
-            <a href="https://twitter.com/" target="_blank" class="px-5 py-3 rounded-2xl bg-zinc-800 hover:bg-zinc-700">Follow on X</a>
-            <a href="https://t.me/" target="_blank" class="px-5 py-3 rounded-2xl bg-zinc-800 hover:bg-zinc-700">Join Telegram</a>
-            <a href="#assets" class="px-5 py-3 rounded-2xl bg-gradient-to-r from-loaf.butter to-loaf.yellow text-zinc-900 font-semibold">Download Media Kit</a>
-          </div>
+<section id="community" class="py-16 border-t border-white/10 bg-zinc-900/40">
+  <div class="max-w-6xl mx-auto px-4">
+    <div class="grid md:grid-cols-2 gap-8 items-center">
+      <div>
+        <h2 class="text-3xl md:text-4xl font-bold">Join the Loaf Army</h2>
+        <p class="mt-3 text-zinc-300">
+          We knead. We rise. We pump. Drop your loaf memes, raid callouts, and alpha. 
+          Stickers, banners, and raid copy included.
+        </p>
+        <div class="mt-6 flex flex-wrap gap-3">
+          <!-- Follow on X -->
+          <a href="https://twitter.com/" target="_blank" 
+             class="group px-5 py-3 rounded-2xl bg-zinc-800 hover:bg-zinc-700 flex items-center gap-2 transition-transform duration-200 hover:scale-[1.02]">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 1227" fill="currentColor" 
+                 class="w-5 h-5 transition-transform duration-200 group-hover:rotate-6 group-hover:drop-shadow-[0_0_8px_rgba(255,255,255,0.35)]">
+              <path d="M714.163 519.284 1160.9 0H1055.21L667.137 450.887 356.703 0H0l463.83 681.653L0 1226.86h105.692l408.78-486.37 328.905 486.37h356.704L714.163 519.284ZM569.805 684.246l-47.34-68.44L144.548 80.518h153.62l300.586 434.518 47.34 68.44 404.516 583.066H896.99L569.805 684.246Z"/>
+            </svg>
+            Follow on X
+          </a>
+
+          <!-- Community (Solana gradient) -->
+          <a href="https://x.com/i/communities/1952809421719126374" target="_blank" 
+             class="group px-5 py-3 rounded-2xl bg-gradient-to-r from-[#00ff9d] via-[#00e0ff] to-[#9d00ff] text-white font-semibold flex items-center gap-2 transition-transform duration-200 hover:scale-[1.04] hover:shadow-[0_0_20px_rgba(3,225,255,0.6)]">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 1227" fill="currentColor" 
+                 class="w-5 h-5 transition-transform duration-200 group-hover:-rotate-6 group-hover:drop-shadow-[0_0_10px_rgba(3,225,255,0.8)]">
+              <path d="M714.163 519.284 1160.9 0H1055.21L667.137 450.887 356.703 0H0l463.83 681.653L0 1226.86h105.692l408.78-486.37 328.905 486.37h356.704L714.163 519.284ZM569.805 684.246l-47.34-68.44L144.548 80.518h153.62l300.586 434.518 47.34 68.44 404.516 583.066H896.99L569.805 684.246Z"/>
+            </svg>
+            Community
+          </a>
         </div>
+      </div>
         <div class="relative rounded-3xl overflow-hidden ring-1 ring-white/10">
           <img src="assets/loaf-3.jpg" alt="Loaf army" class="w-full h-full object-cover" />
           <div class="absolute inset-0 pointer-events-none bg-gradient-to-tr from-transparent via-zinc-950/10 to-transparent"></div>
