--- a/index.html
+++ b/index.html
@@ -120,29 +120,36 @@
             </blockquote>
           </div>
         </div>
-        <div class="space-y-4">
-          <div class="p-5 rounded-2xl bg-zinc-900/60 ring-1 ring-white/10">
-            <h3 class="font-semibold mb-2">Token Stats</h3>
-            <ul class="text-sm text-zinc-300 space-y-1">
-              <li>Chain: <b>Solana</b></li>
-              <li>Supply: <b>1,000,000,000</b></li>
-              <li>Tax: <b>0%</b></li>
-              <li>LP: <b>LOCKED</b></li>
-            </ul>
-          </div>
-          <div class="p-5 rounded-2xl bg-zinc-900/60 ring-1 ring-white/10">
-            <h3 class="font-semibold mb-2">Links</h3>
-            <div class="flex flex-wrap gap-2 text-sm">
-              <a href="https://twitter.com/" target="_blank" class="px-3 py-2 rounded-xl bg-zinc-800 hover:bg-zinc-700">X</a>
-              <a href="https://t.me/" target="_blank" class="px-3 py-2 rounded-xl bg-zinc-800 hover:bg-zinc-700">Telegram</a>
-              <a href="#" class="px-3 py-2 rounded-xl bg-zinc-800 hover:bg-zinc-700">Dexscreener</a>
-              <a href="#" class="px-3 py-2 rounded-xl bg-zinc-800 hover:bg-zinc-700">GMGN</a>
-            </div>
-          </div>
-        </div>
-      </div>
+       <div class="space-y-4">
+ 
+ <!-- Token Stats -->
+  <div class="p-5 rounded-2xl bg-zinc-900/60 ring-1 ring-white/10">
+    <h3 class="font-semibold mb-2">Token Stats</h3>
+    <ul class="text-sm text-zinc-300 space-y-1">
+      <li>Chain: <b>Solana</b></li>
+      <li>Supply: <b>1,000,000,000</b></li>
+      <li>Tax: <b>0%</b></li>
+      <li>LP: <b>LOCKED</b></li>
+    </ul>
+  </div>
+
+  <!-- Links -->
+  <div class="p-5 rounded-2xl bg-zinc-900/60 ring-1 ring-white/10">
+    <h3 class="font-semibold mb-2">Links</h3>
+    <div class="flex flex-wrap gap-2 text-sm">
+      <!-- X -->
+      <a href="https://twitter.com/" target="_blank" 
+         class="px-3 py-2 rounded-xl bg-gradient-to-r from-[#00ff9d] to-[#00cc66] text-black font-semibold hover:shadow-[0_0_12px_rgba(0,255,157,0.6)] transition">
+        X
+      </a>
+      <!-- Dexscreener -->
+      <a href="https://dexscreener.com/solana/PASTE_CONTRACT_HERE" target="_blank" 
+         class="px-3 py-2 rounded-xl bg-gradient-to-r from-[#00ff9d] to-[#00cc66] text-black font-semibold hover:shadow-[0_0_12px_rgba(0,255,157,0.6)] transition">
+        Dexscreener
+      </a>
     </div>
-  </section>
+  </div>
+</div>
 
   <!-- ABOUT -->
   <section id="about" class="py-16 md:py-20">
