--- a/index.html
+++ b/index.html
@@ -70,11 +70,25 @@
           We don’t just want pumps — <span class="text-loaf.neon font-semibold">we KNEAD them</span>.
           The stoic bread cat on Solana. Calm crust. Violent core. Join the loaf army.
         </p>
-        <div class="mt-8 flex flex-wrap gap-3">
-          <a id="buy" href="#" class="px-5 py-3 rounded-2xl bg-gradient-to-r from-sol.top via-sol.mid to-sol.bot text-[#ffbb11] font-bold shadow-loaf">Buy on DEX</a>
-          <a href="#chart" class="px-5 py-3 rounded-2xl bg-zinc-800 hover:bg-zinc-700">Chart</a>
-          <a href="#community" class="px-5 py-3 rounded-2xl bg-zinc-800 hover:bg-zinc-700">Join</a>
-        </div>
+<div class="mt-8 flex flex-wrap gap-3">
+  <!-- Buy on DEX (main CTA) -->
+  <a id="buy" href="#"
+     class="px-6 py-3 rounded-2xl bg-gradient-to-r from-sol.top via-sol.mid to-sol.bot text-[#ffbb11] font-bold shadow-loaf hover:shadow-[0_0_20px_rgba(3,225,255,0.6)] transition-transform duration-200 hover:scale-105 animate-pulse">
+    Buy on DEX
+  </a>
+
+  <!-- Chart -->
+  <a href="#chart"
+     class="px-5 py-3 rounded-2xl bg-zinc-800 hover:bg-zinc-700 ring-1 ring-white/10 transition">
+    Chart
+  </a>
+
+  <!-- Join -->
+  <a href="#community"
+     class="px-5 py-3 rounded-2xl bg-zinc-800 hover:bg-zinc-700 ring-1 ring-white/10 transition">
+    Join
+  </a>
+</div>
         <div class="mt-6 text-xs opacity-70">Contract: <span class="font-mono">PASTE_CONTRACT_HERE</span></div>
       </div>
       <div class="relative">
