--- a/index.html
+++ b/index.html
@@ -51,12 +51,16 @@
         <a href="#roadmap" class="opacity-80 hover:opacity-100">Roadmap</a>
         <a href="#community" class="opacity-80 hover:opacity-100">Community</a>
       </nav>
-      <div class="ml-3 flex items-center gap-2">
-        <a href="https://twitter.com/" target="_blank" class="px-3 py-2 rounded-xl bg-zinc-800 hover:bg-zinc-700">X</a>
-        <a href="https://t.me/" target="_blank" class="px-3 py-2 rounded-xl bg-zinc-800 hover:bg-zinc-700">TG</a>
-        <a href="#buy" class="px-3 py-2 rounded-xl bg-gradient-to-r from-sol.top via-sol.mid to-sol.bot text-[#ffbb11] font-semibold">BUY</a>
-      </div>
-    </div>
+     <div class="ml-3 flex items-center">
+  <a href="https://dexscreener.com/solana/PASTE_CONTRACT_HERE" target="_blank"
+     class="px-4 py-2 rounded-2xl bg-gradient-to-r from-[#00FFA3] via-[#03E1FF] to-[#DC1FFF]
+            text-[#ffbb11] font-semibold shadow-loaf
+            transition-transform duration-200 hover:scale-105
+            [background-size:200%_200%]"
+     style="animation: solanaFlow 6s ease-in-out infinite;">
+    Dexscreener
+  </a>
+</div>
   </header>
 
   <!-- HERO -->
