--- a/index.html
+++ b/index.html
@@ -51,13 +51,10 @@
         <a href="#roadmap" class="opacity-80 hover:opacity-100">Roadmap</a>
         <a href="#community" class="opacity-80 hover:opacity-100">Community</a>
       </nav>
-     <div class="ml-3 flex items-center">
+<div class="ml-3 flex items-center gap-2">
+  <!-- Dexscreener (Solana gradient) -->
   <a href="https://dexscreener.com/solana/PASTE_CONTRACT_HERE" target="_blank"
-     class="px-4 py-2 rounded-2xl bg-gradient-to-r from-[#00FFA3] via-[#03E1FF] to-[#DC1FFF]
-            text-[#ffbb11] font-semibold shadow-loaf
-            transition-transform duration-200 hover:scale-105
-            [background-size:200%_200%]"
-     style="animation: solanaFlow 6s ease-in-out infinite;">
+     class="px-5 py-2 rounded-2xl bg-gradient-to-r from-[#00ff9d] via-[#00e0ff] to-[#9d00ff] text-white font-semibold hover:scale-[1.04] hover:shadow-[0_0_20px_rgba(3,225,255,0.6)] transition">
     Dexscreener
   </a>
 </div>
