--- a/index.html
+++ b/index.html
@@ -73,10 +73,12 @@
         </p>
 <div class="mt-8 flex flex-wrap gap-3">
   <!-- Buy on DEX (main CTA) -->
-  <a id="buy" href="#"
-     class="px-6 py-3 rounded-2xl bg-gradient-to-r from-sol.top via-sol.mid to-sol.bot text-[#ffbb11] font-bold shadow-loaf hover:shadow-[0_0_20px_rgba(3,225,255,0.6)] transition-transform duration-200 hover:scale-105 animate-pulse">
+<a id="buy" href="#"
+   class="px-6 py-3 rounded-2xl bg-gradient-to-r from-sol.top via-sol.mid to-sol.bot font-bold shadow-loaf hover:shadow-[0_0_20px_rgba(3,225,255,0.6)] transition-transform duration-200 hover:scale-105 animate-pulse">
+  <span class="bg-gradient-to-r from-[#00ff9d] via-[#00e0ff] to-[#9d00ff] bg-clip-text text-transparent">
     Buy on DEX
-  </a>
+  </span>
+</a>
 
   <!-- Chart -->
   <a href="#chart"
