--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
       background:url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="128" height="128"><filter id="n"><feTurbulence type="fractalNoise" baseFrequency="0.9" numOctaves="2" stitchTiles="stitch"/></filter><rect width="100%" height="100%" filter="url(%23n)" opacity="0.04"/></svg>') repeat;
       pointer-events:none;
     }
+    /* animated gradient text for BUY */
+    @keyframes gradient-x {
+      0% { background-position: 0% 50%; }
+      100% { background-position: 200% 50%; }
+    }
+    .animate-gradient-x {
+      background-size: 200% 100%;
+      animation: gradient-x 3s linear infinite;
+    }
   </style>
 </head>
 <body class="grain bg-zinc-950 text-zinc-100 antialiased selection:bg-loaf.neon selection:text-zinc-900">
@@ -51,13 +60,15 @@
         <a href="#roadmap" class="opacity-80 hover:opacity-100">Roadmap</a>
         <a href="#community" class="opacity-80 hover:opacity-100">Community</a>
       </nav>
-<div class="ml-3 flex items-center gap-2">
-  <!-- Dexscreener (Solana gradient) -->
-  <a href="https://dexscreener.com/solana/PASTE_CONTRACT_HERE" target="_blank"
-     class="px-5 py-2 rounded-2xl bg-gradient-to-r from-[#00ff9d] via-[#00e0ff] to-[#9d00ff] text-white font-semibold hover:scale-[1.04] hover:shadow-[0_0_20px_rgba(3,225,255,0.6)] transition">
-    Dexscreener
-  </a>
-</div>
+      <div class="ml-3 flex items-center gap-2">
+        <!-- Dexscreener (Solana gradient, softer) -->
+        <a href="https://dexscreener.com/solana/6hnju82mXsgoQkYexCXWdHw7owHb5MQnpFtPqMBpump"
+           target="_blank" rel="noopener"
+           class="px-5 py-2 rounded-2xl bg-gradient-to-r from-[#00ff9d] via-[#00e0ff] to-[#9d00ff] text-white font-medium hover:scale-[1.04] hover:shadow-[0_0_20px_rgba(3,225,255,0.6)] transition">
+          Dexscreener
+        </a>
+      </div>
+    </div>
   </header>
 
   <!-- HERO -->
@@ -71,28 +82,30 @@
           We don’t just want pumps — <span class="text-loaf.neon font-semibold">we KNEAD them</span>.
           The stoic bread cat on Solana. Calm crust. Violent core. Join the loaf army.
         </p>
-<div class="mt-8 flex flex-wrap gap-3">
-  <!-- Buy on DEX (main CTA) -->
-<a id="buy" href="#"
-   class="px-6 py-3 rounded-2xl bg-gradient-to-r from-sol.top via-sol.mid to-sol.bot font-bold shadow-loaf hover:shadow-[0_0_20px_rgba(3,225,255,0.6)] transition-transform duration-200 hover:scale-105 animate-pulse">
-  <span class="bg-gradient-to-r from-[#00ff9d] via-[#00e0ff] to-[#9d00ff] bg-clip-text text-transparent">
-    Buy on DEX
-  </span>
-</a>
-
-  <!-- Chart -->
-  <a href="#chart"
-     class="px-5 py-3 rounded-2xl bg-zinc-800 hover:bg-zinc-700 ring-1 ring-white/10 transition">
-    Chart
-  </a>
-
-  <!-- Join -->
-  <a href="#community"
-     class="px-5 py-3 rounded-2xl bg-zinc-800 hover:bg-zinc-700 ring-1 ring-white/10 transition">
-    Join
-  </a>
-</div>
-        <div class="mt-6 text-xs opacity-70">Contract: <span class="font-mono">PASTE_CONTRACT_HERE</span></div>
+        <div class="mt-8 flex flex-wrap gap-3">
+          <!-- Buy on DEX (main CTA) -->
+          <a id="buy"
+             href="https://pump.fun/6hnju82mXsgoQkYexCXWdHw7owHb5MQnpFtPqMBpump"
+             target="_blank" rel="noopener"
+             class="px-6 py-3 rounded-2xl bg-zinc-900 ring-2 ring-transparent hover:ring-sol.mid font-bold shadow-loaf hover:shadow-[0_0_20px_rgba(3,225,255,0.6)] transition-transform duration-200 hover:scale-105">
+            <span class="bg-gradient-to-r from-[#00ff9d] via-[#00e0ff] to-[#9d00ff] bg-clip-text text-transparent animate-gradient-x">
+              Buy on DEX
+            </span>
+          </a>
+          <!-- Chart -->
+          <a href="#chart"
+             class="px-5 py-3 rounded-2xl bg-zinc-800 hover:bg-zinc-700 ring-1 ring-white/10 transition">
+            Chart
+          </a>
+          <!-- Join -->
+          <a href="#community"
+             class="px-5 py-3 rounded-2xl bg-zinc-800 hover:bg-zinc-700 ring-1 ring-white/10 transition">
+            Join
+          </a>
+        </div>
+        <div class="mt-6 text-xs opacity-70">
+          Contract: <span class="font-mono">PASTE_CONTRACT_HERE</span>
+        </div>
       </div>
       <div class="relative">
         <div class="relative rounded-3xl overflow-hidden ring-1 ring-white/10 shadow-2xl">
@@ -145,12 +158,12 @@
             <h3 class="font-semibold mb-2">Links</h3>
             <div class="flex flex-wrap gap-2 text-sm">
               <!-- X -->
-              <a href="https://twitter.com/" target="_blank"
+              <a href="https://twitter.com/" target="_blank" rel="noopener"
                  class="px-3 py-2 rounded-xl bg-gradient-to-r from-[#00ff9d] to-[#00cc66] text-black font-semibold hover:shadow-[0_0_12px_rgba(0,255,157,0.6)] transition">
                 X
               </a>
               <!-- Dexscreener -->
-              <a href="https://dexscreener.com/solana/PASTE_CONTRACT_HERE" target="_blank"
+              <a href="https://dexscreener.com/solana/6hnju82mXsgoQkYexCXWdHw7owHb5MQnpFtPqMBpump" target="_blank" rel="noopener"
                  class="px-3 py-2 rounded-xl bg-gradient-to-r from-[#00ff9d] to-[#00cc66] text-black font-semibold hover:shadow-[0_0_12px_rgba(0,255,157,0.6)] transition">
                 Dexscreener
               </a>
@@ -249,7 +262,7 @@
           </p>
           <div class="mt-6 flex flex-wrap gap-3">
             <!-- Follow on X -->
-            <a href="https://twitter.com/" target="_blank"
+            <a href="https://twitter.com/" target="_blank" rel="noopener"
                class="group px-5 py-3 rounded-2xl bg-zinc-800 hover:bg-zinc-700 flex items-center gap-2 transition-transform duration-200 hover:scale-[1.02]">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 1227" fill="currentColor"
                    class="w-5 h-5 transition-transform duration-200 group-hover:rotate-6 group-hover:drop-shadow-[0_0_8px_rgba(255,255,255,0.35)]">
@@ -259,7 +272,7 @@
             </a>
 
             <!-- Community (Solana gradient) -->
-            <a href="https://x.com/i/communities/1952809421719126374" target="_blank"
+            <a href="https://x.com/i/communities/1952809421719126374" target="_blank" rel="noopener"
                class="group px-5 py-3 rounded-2xl bg-gradient-to-r from-[#00ff9d] via-[#00e0ff] to-[#9d00ff] text-white font-semibold flex items-center gap-2 transition-transform duration-200 hover:scale-[1.04] hover:shadow-[0_0_20px_rgba(3,225,255,0.6)]">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 1227" fill="currentColor"
                    class="w-5 h-5 transition-transform duration-200 group-hover:-rotate-6 group-hover:drop-shadow-[0_0_10px_rgba(3,225,255,0.8)]">
