--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
   <meta property="og:title" content="$KNEAD — The Loaf That Will Rise" />
   <meta property="og:description" content="We don’t just want pumps — we KNEAD them. Join the loaf army on Solana." />
   <meta property="og:image" content="assets/loaf-hero.jpg" />
-  <meta name="theme-color" content="#f59e0b" />
+ <meta name="theme-color" content="#f59e0b" />
+
+<!-- Favicon -->
+<link rel="icon" type="image/png" sizes="32x32" href="assets/favicon.png">
+<link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+
+<!-- Tailwind (CDN) -->
+<script src="https://cdn.tailwindcss.com"></script>
 
   <!-- Tailwind (CDN) -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -50,10 +57,10 @@
   <!-- NAV -->
   <header class="sticky top-0 z-30 backdrop-blur supports-[backdrop-filter]:bg-zinc-950/60 border-b border-white/10">
     <div class="max-w-7xl mx-auto px-4 py-3 flex items-center gap-4">
-      <a href="#" class="flex items-center gap-3">
-        <span class="inline-block w-9 h-9 rounded-xl bg-gradient-to-br from-loaf.butter to-loaf.yellow shadow-loaf"></span>
-        <span class="font-semibold tracking-wide">$KNEAD</span>
-      </a>
+<a href="#" class="flex items-center gap-3">
+  <img src="assets/logo.png" alt="$KNEAD logo" class="w-9 h-9 rounded-xl">
+  <span class="font-semibold tracking-wide">$KNEAD</span>
+</a>
       <nav class="ml-auto hidden md:flex items-center gap-6 text-sm">
         <a href="#about" class="opacity-80 hover:opacity-100">About</a>
         <a href="#tokenomics" class="opacity-80 hover:opacity-100">Tokenomics</a>
