--- a/index.html
+++ b/index.html
@@ -128,25 +128,33 @@
     </div>
   </section>
 
-  <!-- TICKER / WIDGETS -->
   <section id="chart" class="py-12 md:py-16 border-t border-white/10">
-    <div class="max-w-7xl mx-auto px-4">
-      <div class="grid md:grid-cols-3 gap-6">
-        <div class="md:col-span-2">
-          <div class="rounded-2xl ring-1 ring-white/10 bg-zinc-900/50 p-4">
-            <blockquote class="twitter-tweet" data-theme="dark" data-dnt="true">
-              <p lang="en" dir="ltr">⛧ 𝕿𝖍𝖊 𝕾𝖕𝖗𝖎𝖓𝖌 𝕴𝖘 𝕷𝖔𝖆𝖉𝖊𝖉 ⛧<br><br>
-              BB squeeze = max tension. <br>
-              RSI 42 = stealth accumulation. <br>
-              Vol dead = before the storm. <br><br>
-              MC $75.6K / Liq $36.5K → 2-5x ignition fuel.<br><br>
-              ⚔ One spark (raid / meme / news) → <br>
-              break 0.00015 → rally 0.0005+ with cult hype.<br><br>
-              Just in… <a href="https://t.co/4EUB0j1WUq">pic.twitter.com/4EUB0j1WUq</a></p>&mdash; 0xANARCHO (@0xANARCHO)
-              <a href="https://twitter.com/0xANARCHO/status/1954092948712222810?ref_src=twsrc%5Etfw">August 9, 2025</a>
-            </blockquote>
-          </div>
+  <div class="max-w-7xl mx-auto px-4">
+    <div class="grid md:grid-cols-3 gap-6">
+      <div class="md:col-span-2">
+        <div class="rounded-2xl ring-1 ring-white/10 bg-zinc-900/50 p-4">
+          <blockquote class="twitter-tweet" data-theme="dark" data-dnt="true">
+            <p lang="en" dir="ltr">
+              🚀 KNEAD CULT is live.<br>
+              🐾 Meme is weapon. Mask is signal.<br>
+              🔥 Solana Meme Legion - where degenerates ascend.<br>
+              💬 Join the temple →
+              <a href="https://t.co/72uxUOiT5y">https://t.co/72uxUOiT5y</a>
+              <a href="https://twitter.com/search?q=%24KNEAD&amp;src=ctag&amp;ref_src=twsrc%5Etfw">$KNEAD</a> |
+              <a href="https://twitter.com/hashtag/Solana?src=hash&amp;ref_src=twsrc%5Etfw">#Solana</a>
+              <a href="https://twitter.com/hashtag/CryptoCult?src=hash&amp;ref_src=twsrc%5Etfw">#CryptoCult</a>
+              <a href="https://twitter.com/hashtag/WAGMI?src=hash&amp;ref_src=twsrc%5Etfw">#WAGMI</a>
+              <a href="https://t.co/k4OnjkNqXg">pic.twitter.com/k4OnjkNqXg</a>
+            </p>
+            &mdash; Knead (@knead_ink)
+            <a href="https://twitter.com/knead_ink/status/1956099755177832863?ref_src=twsrc%5Etfw">August 14, 2025</a>
+          </blockquote>
+          <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
+      </div>
+    </div>
+  </div>
+</section>
 
         <div class="space-y-4">
           <!-- Token Stats -->
