--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="mt-8 flex flex-wrap gap-3">
           <!-- Buy on DEX (main CTA) -->
           <a id="buy"
-             href="https://pump.fun/6hnju82mXsgoQkYexCXWdHw7owHb5MQnpFtPqMBpump"
+             href="https://letsbonk.fun/token/EvoLYbnLogXekffYFpaGKP3ZwvdKk6aFAvqodNfBbonk"
              target="_blank" rel="noopener"
              class="px-6 py-3 rounded-2xl bg-zinc-900 ring-2 ring-transparent hover:ring-sol.mid font-bold shadow-loaf hover:shadow-[0_0_20px_rgba(3,225,255,0.6)] transition-transform duration-200 hover:scale-105">
             <span class="bg-gradient-to-r from-[#00ff9d] via-[#00e0ff] to-[#9d00ff] bg-clip-text text-transparent animate-gradient-x">
